Se agrega versión 0.2-Beta con actualización de enviar comandos extras al crear un contenedor.

--- a/listPs.html
+++ b/listPs.html
@@ -55,6 +55,10 @@
           <input type="text" id="txt_ps_ports" class="textbox" placeholder="Local:Contenedor">
     </label>
     <br>
+    <label class="checkbox-container" style="cursor: default; margin-bottom: 1vh;"><b>Extra:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>  
+          <input type="text" id="txt_ps_cmdext" class="textbox" placeholder="-it -u ... (opcional)">
+    </label>
+    <br>
     <label class="checkbox-container" style="cursor: default; margin-bottom: 1vh;"><b>Directorio Compartido:</b>  
           <input type="text" id="txt_ps_dirs" class="textbox" placeholder="Local:Contenedor (opcional)">
     </label> 
